[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Tham LE", email="thi-le@student.42.fr" },
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/thamle/ft_package"
Issues = "https://github.com/thamle/ft_package/issues"
